--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeClock</title>
-<link rel="stylesheet href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="worktime()">
+<body onload="startTime()">
     <div class="container-clock">
         <div class="datetime">
             <!---hour=小時 minutes=分鐘 sconds=秒 hr=早上還是下午-->
@@ -17,19 +17,17 @@
                 <span id="minutes">00</span>:
                 <span id="seconds">00</span>
                 <span id="period">AM</span>
-        
-        </div>
-        </div class="date">
+                </div>
+        <div class="date">
             <!--year=年 month=月 day=幾號 Monday=星期幾-->
-            <span id="year">year</span>年,
-            <span id="month">月</span>,
-            <span id="daynum">00</span>日,
-            <span id="dyname">星期</span>
-
-
+            <span id="year">year</span>年.
+            <span id="month">月</span>.
+            <span id="daynum">00</span>日.
+            <span id="dayname">星期</span>
+             
+    </div>   
     </div>
     </div>
-    </div>
-</body>
-    <script src="script.js"></script>
+    </body>
+    <script src="script.js"></script>  
 </html>
